# mw-ia

./: .gitignore  CLAUDE.md  README.md  check_gpu.py  pyproject.toml  requirements.txt
.github/workflows/: aether_verify.yml
aether/: README.md  verify_all.sh
aether/invariants/: i1_gamma_in_open_unit.aether  i2_bellman_contraction.aether  i3_huber_nonneg.aether  i4_winrate_bounds.aether  i5_epsilon_schedule.aether  i6_replay_buffer_capacity.aether  i7_reward_bounded.aether  i8_episode_termination_exclusive.aether
docs/: LE_PROJET_EXPLIQUE_AUX_ENFANTS.md
docs/findings/: 2026-05-30-v2bx-diagnostic-results.md  2026-06-06-v2c0-rnd-results.md
logs/: manual_validation.md
mw_ia/: config.py
mw_ia/agents/: base.py  conv_dqn.py  conv_recurrent_dqn.py  dqn.py  policy_iteration.py  q_learning.py  recurrent_dqn.py  value_iteration.py
mw_ia/envs/: gridworld.py  maze_generators.py  procedural_env.py
mw_ia/guardrails/: __init__.py  contracts.py  exceptions.py  (+3 more)
scripts/: bench_v2b1a.sh  launch_gui.py  train_cnn_dqn_procedural.py  train_cnn_lstm_dqn_procedural.py  train_dqn.py  train_dqn_procedural.py  train_drqn_procedural.py  train_tabular.py
tests/: conftest.py  test_bx_config.py  test_checkpoint.py  test_config.py  test_conv_dqn_config.py  test_conv_recurrent_dqn_config.py  test_dqn_smoke.py  test_dqn_trainer.py  test_drqn_config.py  test_gridworld.py  test_gui_smoke.py  test_metrics.py  test_policy_iteration.py  test_procedural_config.py  test_q_learning.py  test_qnetwork.py  test_replay_buffer.py  test_rnd_config.py  test_runner.py  test_value_iteration.py
(+97 files in other folders)
