[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mw_ia"
version = "0.1.0"
description = "MW_IA — Reinforcement Learning éducatif (Bellman → DQN) avec GUI PyQt6."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["mw_ia*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
